feat: provide secret and expiration time